--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- parent="android:Theme.Material.Light.NoActionBar"-->
 
-    <style name="Theme.SplyzaTeams" parent="android:Theme.Material.Light.NoActionBar">
+    <style name="Theme.SplyzaTeams"
+        parent="android:Theme.Material.Light.NoActionBar">
         <item name="android:statusBarColor">@color/purple_700</item>
+        <item name="android:windowBackground">@color/purple_700</item>
     </style>
 </resources>
